@@ -259,7 +259,7 @@ org.iq80.leveldb.version = 0.7
 /org.iq80.leveldb/leveldb = ${org.iq80.leveldb.version}
 /org.iq80.leveldb/leveldb-api = ${org.iq80.leveldb.version}
 
-org.kitesdk.kite-morphlines.version = 0.12.1
+org.kitesdk.kite-morphlines.version = 1.1.0
 /org.kitesdk/kite-morphlines-avro = ${org.kitesdk.kite-morphlines.version}
 /org.kitesdk/kite-morphlines-core = ${org.kitesdk.kite-morphlines.version}
 /org.kitesdk/kite-morphlines-hadoop-sequencefile = ${org.kitesdk.kite-morphlines.version}
