@@ -27,9 +27,16 @@ import org.apache.hadoop.mrunit.types.Pair;
 import org.apache.lucene.util.Constants;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.hadoop.morphline.MorphlineMapper;
+import org.apache.solr.util.BadHdfsThreadsFilter;
+import org.apache.solr.util.BadMrClusterThreadsFilter;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
+import com.carrotsearch.randomizedtesting.annotations.ThreadLeakFilters;
+
+@ThreadLeakFilters(defaultFilters = true, filters = {
+    BadHdfsThreadsFilter.class // hdfs currently leaks thread(s)
+})
 public class MorphlineMapperTest extends MRUnitBase {
   
   @BeforeClass
